# podcast-using-skill

./: .env.example  .gitignore  CLAUDE.md  README.md  README_API.md  demo-skill.md  how-to-crawl-with-chrome-dev-mcp.md  musk.txt  pyproject.toml  小学三年级单词表.xlsx
.claude/: settings.json  settings.local.json
.claude/agents/: git-assistant.md
.claude/skills/crawl/: BEST_PRACTICES.md  EXAMPLES.md  QUICK_START.md  README.md  SKILL.md  crawl_manager.py  how-to-crawl-with-chrome-dev-mcp.md
.claude/skills/kpi-analyst/reference/: 分工.md
.claude/skills/podcast-writer/: FAMOUS_TEMPL.md  NEWS.md  OTHER.md  TECH.md  input.txt
.claude/skills/podcast-writer/characters/man/: reference.json
.claude/skills/podcast-writer/scripts/: runninghub_api.py
.claude/skills/vision/: vision_analyzer.py
.claude/skills/zhipu-search/: SKILL.md  zhipu_searcher.py
.claude/skills/zhipu-search/reference/: main.py  zhipu-api.md
src/: README_extractor.md  content_extractor.py  database.py  essay_manager.py  example_usage.py
src/podcast_examples/: __init__.py
